[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Char.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/RoadBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/sky.png" type="Texture" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/backgrounds.png" type="Texture" id=5]
[ext_resource path="res://scenes/CharUnder.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Level.gd" type="Script" id=7]
[ext_resource path="res://scenes/Side.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 206, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 440 )

[node name="Level" type="Node2D"]
script = ExtResource( 7 )

[node name="SkyBack" type="ColorRect" parent="."]
margin_right = 384.0
margin_bottom = 216.0
color = Color( 0.247059, 0.827451, 0.917647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 192, 32 )
scale = Vector2( 384, 1 )
texture = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
vframes = 4
hframes = 2

[node name="RoadBlock" parent="." instance=ExtResource( 2 )]
position = Vector2( 205, 137 )

[node name="Side" parent="." instance=ExtResource( 9 )]
position = Vector2( 205, 185 )

[node name="CharUnder" parent="." instance=ExtResource( 6 )]

[node name="OtherCars" type="Node2D" parent="."]

[node name="Char" parent="." instance=ExtResource( 1 )]
position = Vector2( 85, 135 )
collision/safe_margin = 1.0

[node name="Ground" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 191, 162 )
shape = SubResource( 1 )

[node name="Wall1" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
position = Vector2( -25, -222 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 409, -224 )
shape = SubResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 4 )]
